<resources>
    <string name="app_name">Acuario</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>

    <string name="luces">Configurar las luces</string>
    <string name="blue">Conectarse al sistema</string>
    <string name="blue_conect">Conectado al sistema</string>
    <string name="blue_config">Configuracion de bluetooth</string>
    <string name="blue_desconectado">Desconectado del sistema</string>
    <string name="nivel_agua">Setear el nivel de agua</string>
    <string name="ventilador">Temperatura maxima</string>
    <string name="mi_reef">Mi Reef</string>
    <string name="bitacora">Mediciones del agua</string>
    <string name="enviar_comentario">Enviar comentario</string>
    <string name="mi_acuario">Acuario</string>
    <string name="titulo_bajo">Controles basicos de mi acuario. Creado por Goosfancito  (Argentina)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seteo_luces">Configure a su gusto como desea que funcione el grupo de luces</string>

    <string name="encendido">Encendido</string>
    <string name="hora_encendido">Hora de encendido</string>
    <string name="potencia_encendido">Potencia de la luz al iniciar</string>
    <string name="potencia_incrementos">Incrementos en potencia</string>
    <string name="minutos_incremento">Incrementos en minutos</string>
    <string name="potencia_final">Potencia final de la luz</string>

</resources>
